--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         </div>
       </section>
 
-      <img src="dice-5.png" alt="Playing dice" class="dice" />
+      <img src="dice-5.png" alt="Playing dice" class="dice dice--1" />
+      <img src="dice-5.png" alt="Playing dice" class="dice dice--2" />
       <button class="btn btn--new"><i class="fa-solid fa-circle-plus"></i> New game</button>
       <button class="btn btn--roll"><i class="fa-solid fa-rotate"></i> Roll dice</button>
       <button class="btn btn--hold"><i class="fa-solid fa-circle-check"></i> Hold</button>
