--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <button class="close-modal">&times;</button>
       <h2>HOW TO PLAY <i class="fa-solid fa-dice"></i></h2>
       <p>Roll the dice to start the game.</p><br>
-      <p class="bold-line">If neither die shows a score of 1, the total score is added to the active player's currect score.</p><br>
-      <p>The active player can then click hold to save the current score to their score. Play switches players.</p><br>
-      <p class="bold-line">If either die shows a score of 1, current score is set to 0. Play switches players.</p><br>
-      <p>If both dice show a score of 1, the active player's score is reset to 0. Play switches players.</p><br>
+      <p class="bold-line">If neither die shows a 1, the total score is added to your currect score.</p><br>
+      <p>Click hold to save the current score to your score. Play switches players.</p><br>
+      <p class="bold-line">If either die shows a 1, current score is set to 0. Play switches players.</p><br>
+      <p>If both dice show a 1, your score is reset to 0. Play switches players.</p><br>
       <p class="bold-line">The first player to reach a score of 100 wins!</p>
     </div>
     <div class="overlay hidden"></div>
